[ui] Fix focus ring overlapping with reload warning.
Fixed: 365913973
Screenshot: https://imgur.com/Pug4ue8.png
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5855504
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -446,13 +446,17 @@ input::placeholder {
 }
 
 .chrome-select-label {
-  margin: 0 22px;
+  margin: 0 var(--sys-size-10);
   flex: none;
-}
 
-.chrome-select-label p p {
-  margin-top: 0;
-  color: var(--sys-color-token-subtle);
+  p p {
+    margin-top: 0;
+    color: var(--sys-color-token-subtle);
+  }
+
+  .reload-warning {
+    margin-left: var(--sys-size-5);
+  }
 }
 
 /* This class is used outside of the settings screen in the "Renderer" and
@@ -560,11 +564,6 @@ span[is="dt-icon-label"] {
 
 ::selection {
   background-color: var(--sys-color-tonal-container);
-}
-
-.reload-warning {
-  align-self: center;
-  margin-left: 10px;
 }
 
 button.link {
